fix vertical spacing for tags

--- a/src/styles/skills.sass
+++ b/src/styles/skills.sass
@@ -9,6 +9,7 @@
   .tags .tag
     &:not(:last-child)
       margin-right: .5rem
+      margin-bottom: .5rem
 
   .tag:not(body)
     align-items: center
